--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,8 +9,6 @@
     <!-- Bootstrap CSS -->
       <link rel="stylesheet"href="{% static "css/bootstrap.min.css" %}">
       <title>BookTime</title>
-      {% block content %}
-      {% endblock content %}
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-­light">
@@ -41,6 +39,14 @@
           </ul>
         </div>
     </nav>
+
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
+
+    {% block content %}
+    {% endblock content %}
+
     <script src="{% static "js/jquery.min.js" %}"></script>
     <script src="{% static "js/popper.min.js" %}"></script>
     <script src="{% static "js/bootstrap.min.js" %}"></script>
