--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -43,6 +43,13 @@
     {% for message in messages %}
       <div class="alert alert-{{ message.tags }}">{{ message }}</div>
     {% endfor %}
+    
+    {% if request.basket %}
+       <div>
+         {{ request.basket.count }}
+         items in basket
+       </div>
+     {% endif %}
 
     {% block content %}
     {% endblock content %}
@@ -50,5 +57,8 @@
     <script src="{% static "js/jquery.min.js" %}"></script>
     <script src="{% static "js/popper.min.js" %}"></script>
     <script src="{% static "js/bootstrap.min.js" %}"></script>
+
+    {% block js %}
+    {% endblock js %}
   </body>
 </html>
