--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,6 +1,33 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2>Home</h2>
-  <p>Web site is in development phase</p>
+<div class="container">
+  <p class="teal-text">Books always arrive on time</p>
+</div>
+
+<footer class="page-footer teal">
+  <div class="container">
+    <div class="row">
+      <div class="col s10">
+        <p class="white-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos officia laboriosam esse vel consectetur corporis tenetur impedit numquam laborum cupiditate, molestiae accusamus tempore tempora nobis sunt id veritatis aut voluptatem.</p>
+      </div>
+      <div class="col offset-s10 s12">
+        <a class="white-text" href="/about-us/"><h5>About us</h5></a>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+      <div class="row">
+        <div class="col s10">
+            <p class="white-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est voluptas doloribus magni eligendi? Sit, illum numquam. Nam officia quo pariatur nisi necessitatibus eaque, quae illum a ullam dolore iure atque.</p>
+        </div>
+        <div class="col offset-s10 s12">
+          <p>Created by:</p>
+          <h6  class="white-text">Ilya Kontaev and Victoria Phateeva</h6>
+          <a class="white-text" href="/contact-us/"><h5>Contact us</h5></a>
+        </div>
+    </div>
+  </div>
+</footer>
 {% endblock content %}
