--- a/main/templates/about_us.html
+++ b/main/templates/about_us.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2>About us</h2>
-  <p>BookTime is a company that sells books online.</p>
+  <div class="container">
+      <h3 class="teal-text">About us</h3>
+      <p class="teal-text">BookTime is a company that sells books online.</p>
+  </div>
 {% endblock content %}
