--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -4,37 +4,33 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-­fit=no">
-    <!-- Bootstrap CSS -->
-      <link rel="stylesheet"href="{% static "css/bootstrap.min.css" %}">
-      <title>BookTime</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-­fit=no">
+    <!-- Minimize CSS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet"href="{% static "css/materialize.min.css" %}">
+
+    <title>BookTime</title>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-­light">
-        <a class="navbar-brand" href="/">BookTime</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse"
-          id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li
-              class="nav-item {% if request.path == "/" %}active{% endif %}">
-              <a class="nav-link" href="/">Home</a>
+  <body class="white">
+    <nav class="teal lighten-1" role="navigation">
+        <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Booktime</a>
+          <ul class="right hide-on-med-and-down">
+            <li class="nav-item {% if request.path == "/products/all" %}active{% endif %}">
+              <a class="nav-link" href="/products/all">Books</a>
+            </li>            
+            <li class="nav-item {% if request.path == "/basket/" %}active{% endif %}">
+              <a class="nav-link" href="/basket/">Basket:
+                {% if request.basket %}
+                    {{ request.basket.count }} items
+                {% endif %}
+              </a>
             </li>
-            <li
-              class="nav-item {% if request.path == "/about-us/" %}active{% endif %}">
-              <a class="nav-link" href="/about-us/">About us</a>
-            </li>
-            <li
-              class="nav-item {% if request.path == "/contact-us/" %}active{% endif %}">
-              <a class="nav-link" href="/contact-us/">Contact us</a>
+            <li class="nav-item {% if request.path == "/signup/" %}active{% endif %}">
+              {% if user.is_authenticated %}
+                <a class="nav-link" href="/address">{{ user.email }}</a>
+              {% else %}
+                <a class="nav-link" href="/signup">Sign-up</a>
+              {% endif %}
             </li>
           </ul>
         </div>
@@ -43,20 +39,12 @@
     {% for message in messages %}
       <div class="alert alert-{{ message.tags }}">{{ message }}</div>
     {% endfor %}
-    
-    {% if request.basket %}
-       <div>
-         {{ request.basket.count }}
-         items in basket
-       </div>
-     {% endif %}
 
     {% block content %}
     {% endblock content %}
 
+    <script src="{% static "js/materialize.min.js" %}"></script>
     <script src="{% static "js/jquery.min.js" %}"></script>
-    <script src="{% static "js/popper.min.js" %}"></script>
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
 
     {% block js %}
     {% endblock js %}
